--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "bot that breaks your lengthy message into smaller paragraphs to forward to someone ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node index.js"
   },
   "repository": {
     "type": "git",
